# ygodestiny

./: .gitignore  Cargo.toml
directories-rs/: git
directories-rs/.git_external/: config  index  packed-refs
directories-rs/.git_external/objects/pack/: pack-b391ca839512ed71ea8041f560f8dff30bd7d14f.idx  pack-b391ca839512ed71ea8041f560f8dff30bd7d14f.pack  pack-b391ca839512ed71ea8041f560f8dff30bd7d14f.rev
directories-rs/.git_external/refs/heads/: main
directories-rs/src/: lin.rs
flatpak/: xyz.ygodestiny.YGODestiny.Devel.json
src/: lib.rs  main.rs
src/data/: dirs.rs  files.rs  images.rs  metadata.rs  mod.rs  redb_storage.rs
src/data/game_mode/: mod.rs
src/data/pack/: mod.rs
src/gui/: mod.rs
src/gui/components/: game_mode_overview.rs  game_mode_page.rs  mod.rs  new_game_mode_page.rs
src/gui/factories/: game_mode_entry.rs  mod.rs
src/gui/subclass/: card_box.rs  center_row_layout.rs  mod.rs
src/gui/templates/: breakpoint.rs  clamp.rs  mod.rs  new_game_mode.rs  page.rs  split_view.rs
src/settings/: game_mode.rs
src/settings/game_mode/: mod.rs  multi_choice.rs  set_rotation.rs
src/settings/game_mode/components/: timeline.rs
src/traits/: mod.rs  redb_storage.rs
src/userdata/: mod.rs  redb_storage.rs
src/userdata/game_mode/: mod.rs
utils/: build-devel.sh  run.sh
ygodestiny_macros/: Cargo.toml
ygodestiny_macros/src/: cmd.rs  lib.rs  row.rs  row_def.rs  settings.rs  statement.rs  val.rs  val_def.rs
ygodestiny_macros/src/subclass/: declaration.rs  implementation.rs  imports.rs  mod.rs  state.rs
(+1 files in other folders)
