[package]
name = "ygodestiny"
version = "0.1.0"
edition = "2021"

[dependencies.adw]
package = "libadwaita"
version = "0.5"

[dependencies.gtk]
package = "gtk4"
version = "0.7"

[dependencies]
anyhow = "1.0"
directories = "0.5"
env_logger = { version = "0.10", features = ["color"] }
log = "0.4"
once_cell = "1.18"
redb = "1.3"
ron = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.5", features = ["v4"] }
ygodestiny_macros = { path = "ygodestiny_macros" }
